// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItemCheckbox > renders correcly when disabled multiselect and not selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="secondary-text"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correcly when disabled multiselect and selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="secondary-text"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correcly when multiselect and not selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="secondary-text"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correcly when multiselect and selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="primary"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correctly 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="secondary-text"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M17,13H7V11H17M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correctly when disabled single select and is not selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <!--v-if-->
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correctly when disabled single select and is selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="secondary-text"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correctly when single select and is selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <v-icon-stub
    class="list-item-checkbox"
    color="primary"
    disabled="false"
    end="false"
    size="default"
    start="false"
    tag="i"
  >
    M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
  </v-icon-stub>
</v-list-item-action-stub>
`;

exports[`ListItemCheckbox > renders correctly when single select and not selected value 1`] = `
<v-list-item-action-stub
  class="my-0 list-item-action"
  end="false"
  start="false"
  tag="div"
>
  <!--v-if-->
</v-list-item-action-stub>
`;
